--- a/masa-date-demo/package.json
+++ b/masa-date-demo/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Senin İsmin",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
